# skp2gltf

./: .gitignore  CMakeLists.txt  README.md  README_en.md  directory_structure.md
cmake/: sketchup-sdk.cmake
include/exportgltf/: exportgltf.h  exportgltf2xml.h
include/gltflib/: creategltfcommon.h  datatransform.hpp  gltfdraco.h  parsegltfcommon.h  parsemeshdata.h
include/skp2xml/: stdafx.h  xmlexporter.h  xmlfile.h  xmlinheritancemanager.h
lib/: SketchUpAPI.lib  sketchup.lib
src/: main.cpp
src/exportgltf/: CMakeLists.txt  exportgltf.cpp  exportgltf2xml.cpp
src/gltflib/: CMakeLists.txt  creategltfcommon.cpp  datatransform.hpp  gltfdraco.cpp  parsegltfcommon.cpp  parsemeshdata.cpp
src/skp2xml/: CMakeLists.txt  stdafx.cpp  xmlexporter.cpp  xmlinheritancemanager.cpp
src/tinyxml2/: CMakeLists.txt
test/: test.skp
